# Venketesh

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  Makefile  README.md  airflow-compose.yml  docker-compose.yml  pyproject.toml  requirements-fastapi.txt  requirements.txt
.github/: copilot-instructions.md
Agents/: CODEX.md  COPILOT_CHAT_TEMPLATE.md  OPENCODE.md  WORKLOG.md
airflow/dags/: market_data_etl_dag.py
app/: config.py  dependencies.py  main.py
app/adapters/: alphavantage.py  base.py  factory.py  finnhub.py  nse.py  upstox.py  yahoo.py
app/core/: constants.py  exceptions.py  logging_config.py  metrics.py  security.py
app/etl/: extract.py  load.py  pipeline.py  runner.py  scheduler.py  transform.py
app/models/: api_requests.py  enums.py  etl_jobs.py  news.py  ohlc.py  source_health.py  symbol.py
app/schemas/: common.py  ohlc.py  symbol.py
app/services/: aggregator.py  cache.py  database.py  entity_mapper.py  feature_engine.py  insight_engine.py  ml_prediction.py  news_scraper.py  news_service.py  sentiment_engine.py  validator.py
app/tasks/: celery_app.py  jobs.py
backend/: main.py
backend/adapters/: base.py  nse.py  yahoo.py
backend/core/: backoff.py  config.py  exceptions.py  logging_config.py  memory_cache.py  models.py  (+1 more)
dags/: market_data_etl.py  ml_model_training.py  news_sentiment_etl.py
docs/: BACKEND.md  DESIGN.md  ML_PIPELINE_ARCHITECTURE.md  SRS.md  VSCODE.md  WORKLOG.md  prd.md  testing.md
frontend/: index.html
migrations/: init.sql
plan/: checklist.md  phase.md
tests/: smoke_test.py
(+30 files in other folders)
